--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "ShootEmUpGame",
   "version": "1.0.0",
-  "description": "Shooting Game",
-  "main": "app.js",
+  "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,14 +9,18 @@
     "type": "git",
     "url": "https://github.com/Khaleed/ShootEmUpGame"
   },
-  "author": "Khalid Omar Ali",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Khaleed/ShootEmUpGame/issues"
   },
   "homepage": "https://github.com/Khaleed/ShootEmUpGame",
   "dependencies": {
-    "express": "^4.13.3",
-    "socket.io": "^1.3.7"
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
+    "babel-runtime": "^5.8.25",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "json-loader": "^0.5.3",
+    "webpack": "^1.12.2"
   }
 }
