--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "./node_modules/.bin/webpack-dev-server --inline"
+
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,8 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "json-loader": "^0.5.3",
     "webpack": "^1.12.2"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^1.12.1"
   }
 }
