--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "./node_modules/.bin/webpack-dev-server --inline"
+    "watch": "webpack-dev-server --config=webpack.config.js"
 
   },
   "repository": {
