--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Khaleed/ShootEmUpGame"
+    "url": "https://github.com/Khaleed/ShootEmUp"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Khaleed/ShootEmUpGame/issues"
+    "url": "https://github.com/Khaleed/ShootEmUp/issues"
   },
-  "homepage": "https://github.com/Khaleed/ShootEmUpGame",
+  "homepage": "https://github.com/Khaleed/ShootEmUp",
   "dependencies": {
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
