--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/Khaleed/ShootEmUp"
   },
-  "author": "",
+  "author": "Khalid Omar Ali",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Khaleed/ShootEmUp/issues"
