--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.8.25",
+    "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^0.8.2",
     "json-loader": "^0.5.3",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-server": "^1.14.1"
   }
 }
