--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Space Invaders in functional JavaScript",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack-dev-server --config=webpack.config.js",
+    "watch": "webpack-dev-server --config webpack.config.js",
     "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
   },
   "repository": {
