--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   "homepage": "https://github.com/Khaleed/ShootEmUp",
   "dependencies": {
     "babel-core": "^5.8.25",
+    "babel-eslint": "^6.0.0",
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.8.25",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
+    "eslint": "^2.5.3",
+    "eslint-config-airbnb": "^6.2.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "json-loader": "^0.5.3",
     "mocha": "^2.4.5",
