--- a/.eslintrc
+++ b/.eslintrc
@@ -38,7 +38,7 @@
     "comma-spacing": [2, { "before": false, "after": true }],
     "comma-style": [2, "last"],
     "complexity": 0,
-    "consistent-return": 2,
+    "consistent-return": [0],
     "consistent-this": 0,
     "curly": [2, "multi-line"],
     "default-case": 0,
