--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,26 @@
 envs
-/node_modules
+node_modules/
+build/Release
+.npm
+.node_repl_history
+*.xls
+*.csv
+*.json
+.awspublish*
+logs
+*.log
+*.pid
+*.seed
 .DS_Store
-npm-debug.log
+lib
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+/eshell/history
+/eshell/lastdir
+.tern-port
