--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "https://github.com/Khaleed/ShootEmUp"
   },
-  "author": "Khalid Omar Ali",
+  "author": "Khalid",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Khaleed/ShootEmUp/issues"
