--- a/package.json
+++ b/package.json
@@ -28,10 +28,9 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "json-loader": "^0.5.3",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.11",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^2.4.5"
   },
   "devDependencies": {
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^1.15.0"
   }
 }
